--- a/stany/src/main/resources/application.properties
+++ b/stany/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.h2.console.path=/h2
 
 #Datasource
 spring.datasource.name=db
-//spring.datasource.url=jdbc:h2:mem:~/db
-spring.datasource.url=jdbc:h2:file:~/db
+spring.datasource.url=jdbc:h2:mem:~/db
+//spring.datasource.url=jdbc:h2:file:~/db
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
